test/files/neg/t3403.scala
import scala.reflect.{BeanProperty => bp}
class Foo { @bp var bar: Int = 1 }
